--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.176.0",
-    "csv-parse": "^2.0.0"
+    "csv-parse": "^2.0.0",
+    "npm": "^5.8.0"
   }
 }
