--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.176.0",
     "csv-parse": "^2.0.0",
+    "moment": "^2.24.0",
     "npm": "^5.8.0"
   }
 }
