--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "author": "Pieter Delbeke",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.176.0",
-    "csv-parse": "^2.0.0",
-    "moment": "^2.24.0",
-    "npm": "^5.8.0"
+    "aws-sdk": "^2.533.0",
+    "csv-parse": "^4.4.6",
+    "moment": "^2.24.0"
   }
 }
